--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "urlId" : "cT82M530-6a7d-4deb-a16b-6a335a67ffa7",
+    "urlId" : "aT83M535-617h-5deb-a17b-6a335a67ffd5",
     "multiplier" : 1,
-    "tileSequence" : [2, 4, 8, 16, 32, 64, 128, 256]
+    "tileSequence" : [4, 8, 16, 32, 64, 128, 256]
 }
